@@ -1,4 +1,3 @@
-- preserve lo iface based on iface type, not iface name
 - complete the hosts stuff
 - complete the locations stuff
 - add modem devices
